Fixing loading on mobiles

--- a/styles/components/products.scss
+++ b/styles/components/products.scss
@@ -15,6 +15,9 @@
 
   @media screen and (max-width: 680px) {
     max-width: 380px;
+    > .product &:not(:first-child) {
+      display: none !important;
+    }
   }
 
   .product {
@@ -23,12 +26,6 @@
     background: #090909;
     box-shadow: 0px 0px 2px 0px #00000040;
     transition: box-shadow 0.3s ease;
-
-    @media screen and (max-width: 680px) {
-      &:not(:first-child) {
-        display: none;
-      }
-    }
 
     .light & {
       background: #fff;
